@@ -364,7 +364,7 @@ $specialPageAliases = array(
 	'Uncategorizedpages'        => array( 'Uncategorizedpages' ),
 	'Uncategorizedcategories'   => array( 'Uncategorizedcategories' ),
 	'Uncategorizedimages'       => array( 'Uncategorizedimages' ),
-	'Uncategorizedtemplates' 	=> array( 'Uncategorizedtemplates' ),
+	'Uncategorizedtemplates'    => array( 'Uncategorizedtemplates' ),
 	'Unusedcategories'          => array( 'Unusedcategories' ),
 	'Unusedimages'              => array( 'Unusedimages' ),
 	'Wantedpages'               => array( 'Wantedpages', 'Brokenlinks' ),
@@ -2087,9 +2087,11 @@ the list of currently operational bans and blocks.',
 'range_block_disabled'        => 'The sysop ability to create range blocks is disabled.',
 'ipb_expiry_invalid'          => 'Expiry time invalid.',
 'ipb_already_blocked'         => '"$1" is already blocked',
-'ip_range_invalid'            => 'Invalid IP range.',
-'proxyblocker'                => 'Proxy blocker',
 'ipb_cant_unblock'            => 'Error: Block ID $1 not found. It may have been unblocked already.',
+'ip_range_invalid'            => 'Invalid IP range.',
+'blockme'                     => 'Block me',
+'proxyblocker'                => 'Proxy blocker',
+'proxyblocker-disabled'       => 'This function is disabled.',
 'proxyblockreason'            => 'Your IP address has been blocked because it is an open proxy. Please contact your Internet service provider or tech support and inform them of this serious security problem.',
 'proxyblocksuccess'           => 'Done.',
 'sorbs'                       => 'DNSBL', # only translate this message to other languages if you have to change it
